--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,3 @@
-
 html
   head
     meta(charset='utf-8')
@@ -8,10 +7,6 @@ html
     // CSS file
     link(href='http://localhost:3000/static/css/style.css', rel='stylesheet')
   body
-    h1 SVCC Auth!
-    p
-      | Welcome to the SVCC Auth! home page.  Please
-      a(href='/register') register
-      |  or 
-      a(href='/login') login
-      |  to continue!
+  include ./nav.jade
+
+ 
