--- a/views/nav.jade
+++ b/views/nav.jade
@@ -1,12 +1,13 @@
 html
   body
-    nav
-      ul
-        li
-          a(href='/register')
-            i.icon-home
-            |  Sign-Up
+    nav.main
+      div.push
+        | Please Login or Sign-up to view our menu
+      ul.services
         li
           a(href='/login')
-            i.icon-user
             |  Login
+        li
+          a(href='/register')
+            |  Sign-Up
+      
