--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -8,9 +8,9 @@ html
     // CSS file
     link(href='http://localhost:3000/static/css/style.css', rel='stylesheet')
   body
-    form#main(method='post', action='submit.php')
+    form.main#main(method='post', action='submit.php')
       h1 Our Menu
-      ul#services
+      ul.services#services
         // The services
       p#total
         | total: 
