day 1 final commit

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -8,7 +8,7 @@ html
     // CSS file
     link(href='http://localhost:3000/static/css/style.css', rel='stylesheet')
   body
-    form.main#main(method='post', action='submit.php')
+    form.main#main(method='post')
       h1 Our Menu
       ul.services#services
         // The services
