--- a/views/login.jade
+++ b/views/login.jade
@@ -10,7 +10,7 @@ html
                 br
                 input.new(type='password', name='password' placeholder='Password')    
                 br
-                input(type='submit')
+                input.new(type='submit')
 
 
   //-           html
